--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			
 		
 			<div class="celebration gt_logo_padding" style="padding-top:30px;">      
-				<div class="admission-top"><a href="images/application-form.pdf" target="_blank">ADMISSIONS NOW OPEN</a></div>
+				<div class="admission-top"><a href="#" >ADMISSIONS NOW OPEN</a></div>
 			</div>
             <!--Logo Wrap End-->
    
